--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     </section>
     <!--Latest Portfolio-->
-    <section class="bg-white">
+    <section class="bg-white pt-24">
       <div class="my-8">
         <div class="flex flex-col justify-center items-center">
           <button class="bg-[#dcf7be] text-gray-600 font-bold rounded-full p-3">
