--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body class="manrope-normal">
   <header class="container mx-auto w-[335px] bg-[#f9f3f3] lg:w-full">
-    <nav class="pt-12">
+    <nav class="pt-12 lg:px-24">
       <div class="navbar bg-[#f9f3f3]">
         <div class="navbar-start">
 
@@ -31,7 +31,7 @@
           <a class="btn btn-ghost text-3xl font-extrabold">Rinterio</a>
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1 text-base">
+          <ul class="menu menu-horizontal px-1 text-base lg:pr-24">
             <li><a class="font-extrabold text-gray-600">Home</a></li>
             <li><a class="text-gray-500">Service</a></li>
             <li><a class="text-gray-500">Portfolio</a></li>
@@ -46,7 +46,7 @@
           <div class="rounded-full bg-white mr-4 hidden lg:block">
             <i class="fa-solid fa-cart-shopping text-gray-400 text-xl px-2 py-1"></i>
           </div>
-          <a class="text-black font-extrabold text-xl bg-[#ABEF5F] rounded-full px-8 py-2 hidden lg:block"
+          <a class="text-black font-extrabold text-xl bg-[#ABEF5F] rounded-full px-8 py-2 lg:px-4 hidden lg:block"
             class="btn w-58">
             Book Consult
             <button class="btn bg-black  rounded-full ml-2">
